# tts-air

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/capture/: Cargo.toml
crates/capture/src/: lib.rs  saapi.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: main.rs  stream.rs  tts.rs
